# wordle-solver

./: pyproject.toml
src/wordle_solver/: game_show_host.py  solve.py  wordle.py
src/wordle_solver/repo/: answers.py
tests/tests/: test_wordle.py
