[tool.poetry]
name = "wordle-solver"
version = "0.1.0"
description = ""
authors = ["Isao Ramos <isao@rayamos.com>"]
readme = "README.md"
packages = [{include = "wordle-solver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
