[tool.poetry]
name = "wordle-solver"
version = "0.1.0"
description = ""
authors = ["Isao Ramos <isao@rayamos.com>"]
readme = "README.md"
packages = [{include = "wordle-solver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
